@@ -1,7 +1,7 @@
 package com.wizzdi.basic.iot.service.service;
 
 import com.flexicore.model.*;
-import com.flexicore.security.SecurityContextBase;
+import com.wizzdi.flexicore.security.configuration.SecurityContext;
 import com.wizzdi.basic.iot.model.Device;
 import com.wizzdi.basic.iot.model.DeviceType;
 import com.wizzdi.basic.iot.model.Gateway;
@@ -50,7 +50,7 @@ public class GatewayMoveService implements Plugin {
     private MapIconService mapIconService;
 
 
-    public void validate(MoveGatewaysRequest moveGatewaysRequest, SecurityContextBase securityContext) {
+    public void validate(MoveGatewaysRequest moveGatewaysRequest, SecurityContext securityContext) {
         if (moveGatewaysRequest.getGatewayFilter() == null) {
             throw new ResponseStatusException(BAD_REQUEST, "gatewayFilter must be provided");
         }
@@ -58,7 +58,7 @@ public class GatewayMoveService implements Plugin {
         if (moveGatewaysRequest.getTargetTenantId() == null) {
             throw new ResponseStatusException(BAD_REQUEST, "targetTenantId must be provided");
         }
-        SecurityTenant targetTenant = gatewayService.getByIdOrNull(moveGatewaysRequest.getTargetTenantId(), SecurityTenant.class, SecuredBasic_.security, securityContext);
+        SecurityTenant targetTenant = gatewayService.getByIdOrNull(moveGatewaysRequest.getTargetTenantId(), SecurityTenant.class,securityContext);
         if (targetTenant == null) {
             throw new ResponseStatusException(BAD_REQUEST, "no tenant with id %s".formatted(moveGatewaysRequest.getTargetTenantId()));
         }
@@ -66,23 +66,23 @@ public class GatewayMoveService implements Plugin {
         if (moveGatewaysRequest.getTargetTenantAdminId() == null) {
             throw new ResponseStatusException(BAD_REQUEST, "targetTenantAdminId must be provided");
         }
-        SecurityUser targetTenantAdmin = gatewayService.getByIdOrNull(moveGatewaysRequest.getTargetTenantAdminId(), SecurityUser.class, SecuredBasic_.security, securityContext);
+        SecurityUser targetTenantAdmin = gatewayService.getByIdOrNull(moveGatewaysRequest.getTargetTenantAdminId(), SecurityUser.class,securityContext);
         if (targetTenantAdmin == null) {
             throw new ResponseStatusException(BAD_REQUEST, "no user with id %s".formatted(moveGatewaysRequest.getTargetTenantAdminId()));
         }
         moveGatewaysRequest.setTargetTenantAdmin(targetTenantAdmin);
     }
 
-    public MoveGatewaysResponse moveGatewaysToTenant(SecurityContextBase securityContext, MoveGatewaysRequest moveGatewaysRequest) {
+    public MoveGatewaysResponse moveGatewaysToTenant(SecurityContext securityContext, MoveGatewaysRequest moveGatewaysRequest) {
         SecurityTenant targetTenant = moveGatewaysRequest.getTargetTenant();
         SecurityUser tenantAdmin=moveGatewaysRequest.getTargetTenantAdmin();
-        List<Gateway> gateways = gatewayService.listAllGateways(securityContext, moveGatewaysRequest.getGatewayFilter()).stream().filter(f -> !f.getSecurity().getTenant().getId().equals(targetTenant.getId())).toList();
+        List<Gateway> gateways = gatewayService.listAllGateways(securityContext, moveGatewaysRequest.getGatewayFilter()).stream().filter(f -> !f.getTenant().getId().equals(targetTenant.getId())).toList();
         if (gateways.isEmpty()) {
             return  MoveGatewaysResponse.empty();
         }
         securityContext.setTenantToCreateIn(targetTenant);
-        Map<String, DeviceType> deviceTypeMap = deviceTypeService.listAllDeviceTypes(securityContext, new DeviceTypeFilter()).stream().filter(f -> f.getSecurity().getTenant().getId().equals(targetTenant.getId())).collect(Collectors.toMap(f -> f.getName(), f -> f));
-        Map<String, MapIcon> mapIcons = mapIconService.listAllMapIcons(new MapIconFilter(), securityContext).stream().filter(f -> f.getSecurity().getTenant().getId().equals(targetTenant.getId())).collect(Collectors.toMap(f -> f.getExternalId(), f -> f));
+        Map<String, DeviceType> deviceTypeMap = deviceTypeService.listAllDeviceTypes(securityContext, new DeviceTypeFilter()).stream().filter(f -> f.getTenant().getId().equals(targetTenant.getId())).collect(Collectors.toMap(f -> f.getName(), f -> f));
+        Map<String, MapIcon> mapIcons = mapIconService.listAllMapIcons(new MapIconFilter(), securityContext).stream().filter(f -> f.getTenant().getId().equals(targetTenant.getId())).collect(Collectors.toMap(f -> f.getExternalId(), f -> f));
         List<SecurityUser> gatewayUsers = gateways.stream().map(f -> f.getGatewayUser()).collect(Collectors.toMap(f -> f.getId(), f -> f, (a, b) -> a)).values().stream().toList();
         Map<String, TenantToUser> tenantLinks = tenantToUserService.listAllTenantToUsers(new TenantToUserFilter().setUsers(gatewayUsers), null).stream().filter(f -> f.isDefaultTenant()).collect(Collectors.toMap(f -> f.getUser().getId(), f -> f, (a, b) -> a));
         List<Device> allDevices = deviceService.listAllDevices(securityContext, new DeviceFilter().setGateways(gateways));
@@ -105,7 +105,7 @@ public class GatewayMoveService implements Plugin {
                 device.setDeviceType(matchingDeviceType);
                 MappedPOI pois = device.getMappedPOI();
                 MapIcon currentMapIcon = pois.getMapIcon();
-                String mapIconExtrenalId = currentMapIcon.getExternalId().replace(currentMapIcon.getSecurity().getTenant().getId(), targetTenant.getId());
+                String mapIconExtrenalId = currentMapIcon.getExternalId().replace(currentMapIcon.getTenant().getId(), targetTenant.getId());
                 MapIcon matchingMapIcon = mapIcons.computeIfAbsent(mapIconExtrenalId, externalId -> {
                     MapIcon mapIcon = mapIconService.createMapIcon(new MapIconCreate().setExternalId(externalId).setRelatedType(device.getClass().getCanonicalName()).setName(currentMapIcon.getName()), securityContext);
                     createdMapIcons.getAndIncrement();
@@ -116,9 +116,9 @@ public class GatewayMoveService implements Plugin {
             List<Object> toMerge = new ArrayList<>(devices);
             List<MappedPOI> mappedPOIS = devices.stream().map(f -> f.getMappedPOI()).toList();
             toMerge.addAll(mappedPOIS);
-            List<Baseclass> toMove = devices.stream().map(f -> f.getSecurity()).collect(Collectors.toList());
-            toMove.addAll(mappedPOIS.stream().map(f -> f.getSecurity()).toList());
-            toMove.add(gateway.getSecurity());
+            List<Baseclass> toMove = devices.stream().collect(Collectors.toList());
+            toMove.addAll(mappedPOIS);
+            toMove.add(gateway);
             SecurityUser gatewayUser = gateway.getGatewayUser();
             //handle the case where for some reason gatewayUser is not exclusive for this gateway and is a "real" user
             if(gatewayUser==null||!SecurityUser.class.equals(gatewayUser.getClass())){
@@ -126,35 +126,34 @@ public class GatewayMoveService implements Plugin {
                gateway.setGatewayUser(gatewayUser);
                toMerge.add(gateway);
                 for (MappedPOI pois : mappedPOIS) {
-                   pois.getSecurity().setCreator(gatewayUser);
+                   pois.setCreator(gatewayUser);
                 }
                 for (Device device : devices) {
-                    device.getSecurity().setCreator(gatewayUser);
+                    device.setCreator(gatewayUser);
                 }
                 createdUsers++;
             }
             else{
-                toMove.add(gatewayUser.getSecurity());
-                gatewayUser.getSecurity().setCreator(tenantAdmin);
+                toMove.add(gatewayUser);
+                gatewayUser.setCreator(tenantAdmin);
                 TenantToUser tenantToUser = tenantLinks.get(gatewayUser.getId());
                 if (tenantToUser != null && !tenantToUser.getTenant().getId().equals(targetTenant.getId())) {
                     tenantToUser.setTenant(targetTenant);
-                    tenantToUser.getSecurity().setCreator(tenantAdmin);
-                    tenantToUser.getSecurity().setTenant(targetTenant);
+                    tenantToUser.setCreator(tenantAdmin);
+                    tenantToUser.setTenant(targetTenant);
                     toMerge.add(tenantToUser);
-                    toMerge.add(tenantToUser.getSecurity());
                 }
             }
             MappedPOI gatewayPOI = gateway.getMappedPOI();
             if(gatewayPOI !=null){
-                toMove.add(gatewayPOI.getSecurity());
+                toMove.add(gatewayPOI);
             }
             for (Baseclass baseclass : toMove) {
                 baseclass.setTenant(targetTenant);
             }
-            gateway.getSecurity().setCreator(tenantAdmin);
+            gateway.setCreator(tenantAdmin);
             if(gatewayPOI!=null){
-                gatewayPOI.getSecurity().setCreator(tenantAdmin);
+                gatewayPOI.setCreator(tenantAdmin);
             }
             toMerge.addAll(toMove);
 
@@ -169,7 +168,7 @@ public class GatewayMoveService implements Plugin {
     }
 
 
-    private DeviceType createDeviceType(String name, Map<String, MapIcon> mapIcons, SecurityTenant targetTenant, SecurityContextBase securityContext) {
+    private DeviceType createDeviceType(String name, Map<String, MapIcon> mapIcons, SecurityTenant targetTenant, SecurityContext securityContext) {
 
         MapIconCreate mapIconCreate = getMapIconCreate(UNKNOWN_STATUS_SUFFIX, name, Device.class, targetTenant);
         MapIcon unknown = mapIconService.createMapIcon(mapIconCreate, securityContext);
